WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260964
[IFC][BiDi] Fix fast/scrolling/rtl-scrollbars-elementFromPoint-static.html
https://bugs.webkit.org/show_bug.cgi?id=260964
Summary
[IFC][BiDi] Fix fast/scrolling/rtl-scrollbars-elementFromPoint-static.html
zalan
Reported
2023-08-31 07:43:11 PDT
ssia
Attachments
[fast-cq]Patch
(2.62 KB, patch)
2023-08-31 07:51 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-08-31 07:51:58 PDT
Created
attachment 467507
[details]
[fast-cq]Patch
Antti Koivisto
Comment 2
2023-08-31 07:54:51 PDT
Comment on
attachment 467507
[details]
[fast-cq]Patch | | nice! | | | |
EWS
Comment 3
2023-08-31 09:59:52 PDT
Committed
267506@main
(2a902cee37d8): <
https://commits.webkit.org/267506@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467507
[details]
.
Radar WebKit Bug Importer
Comment 4
2023-08-31 10:00:16 PDT
<
rdar://problem/114771118
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug