[IFC][BiDi] Fix fast/scrolling/rtl-scrollbars-elementFromPoint-static.html https://bugs.webkit.org/show_bug.cgi?id=260964

Reviewed by Antti Koivisto.

Vertical scrollbar on the left (user preference) imposes an offset on LTR content.

e.g.
 _
| |This left to right content has
| |scrollbar on the left.
| |________________________________
|_|________________________________|

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateInlineContentConstraints):

Canonical link: https://commits.webkit.org/267506@main